--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <span>Rakesh Ganga</span>
                 </div>
                 <div class="featured-name">
-                    <p>I'm <span class="typedText">Developer</span></p>
+                    <p>I'm <span class="typedText"></span></p>
                 </div>
                 <div class="featured-text-info">
                     <p>Experienced full stack Developer with a passion for creating user-friendly and scalable websites
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="skill-box">
+                    <div class="skills-box">
                         <div class="skill-header">
                             <h3>Frontend</h3>
                         </div>
@@ -115,7 +115,7 @@
                             <span>Angular</span>
                         </div>
                     </div>
-                    <div class="skill-box">
+                    <div class="skills-box">
                         <div class="skill-header">
                             <h3>Backend</h3>
                         </div>
@@ -128,7 +128,7 @@
                             <span>Flask</span>
                         </div>
                     </div>
-                    <div class="skill-box">
+                    <div class="skills-box">
                         <div class="skill-header">
                             <h3>Database</h3>
                         </div>
@@ -138,7 +138,7 @@
                             <span>MangoDB</span>
                         </div>
                     </div>
-                    <div class="skill-box">
+                    <div class="skills-box">
                         <div class="skill-header">
                             <h3>Cloud</h3>
                         </div>
@@ -150,7 +150,87 @@
                 </div>
             </div>
         </section>
+        <section class="section" id="projects">
+            <div class="top-header">
+                <h1>Projects</h1>
+            </div>
+            <div class="projects-container">
+                <div class="project-box">
+                    <i class="uil uil-briefcase-alt"></i>
+                    <h3>Completed</h3>
+                    <label>3+ Projects</label>
+                </div>
+                <div class="project-box">
+                    <i class="uil uil-users-alt"></i>
+                    <h3>Clients</h3>
+                    <label>3+ Happy Clients</label>
+                </div>
+                <div class="project-box">
+                    <i class="uil uil-award"></i>
+                    <h3>Experience</h3>
+                    <label>3+ Years in the field</label>
+                </div>
+            </div>
+        </section>
+        <section class="section" id="contact">
+            <div class="top-header">
+                <h1>Get in touch</h1>
+                <span>Do you have any project in your mind, contact me here</span>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="contact-info">
+                        <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
+                        <p><i class="uil uil-envelope"></i> Email: rakeshganga012@gmail.com</p>
+                        <p><i class="uil uil-phone"></i> Phone: +91 7396680431</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-control">
+                        <div class="form-inputs">
+                            <input type="text" placeholder="Name" class="input-field">
+                            <input type="text" placeholder="Email" class="input-field">
+                        </div>
+                        <div class="text-area">
+                            <textarea placeholder="Message"></textarea>
+                        </div>
+                        <div class="form-button">
+                            <button class="btn">Send <i class="uil uil-message"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="top-footer">
+            <p>Rakesh Ganga</p>
+        </div>
+        <div class="middle-footer">
+            <ul class="footer-menu">
+                <li class="footer-menu-list">
+                    <a href="#home">Home</a>
+                </li>
+                <li class="footer-menu-list">
+                    <a href="#about">About</a>
+                </li>
+                <li class="footer-menu-list">
+                    <a href="#projects">Projects</a>
+                </li>
+                <li class="footer-menu-list">
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-social-icons">
+            <div class="icon"><i class="uil uil-instagram"></i></div>
+            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+            <div class="icon"><i class="uil uil-github"></i></div>
+        </div>
+        <div class="bottom-footer">
+            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Rakesh Ganga</a> - All rights reserved</p>
+        </div>
+    </footer>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="assets/js/main.js"></script>
