--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <nav id="header">
             <div class="nav-logo">
                 <p class="nav-name">Rakesh Ganga</p>
-                <span>.</span>
             </div>
             <div class="nav-menu" id="myNavMenu">
                 <ul class="nav-menu-list">
                     <li class="nav-list">
-                        <a href="#Home" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link">Home</a>
                         <div class="circle"></div>
                     </li>
                 </ul>
@@ -77,7 +76,7 @@
                 </div>
             </div>
             <div class="scroll-icon-box">
-                <a href="" class="scroll-btn">
+                <a href="#contact" class="scroll-btn">
                     <i class="uil uil-mouse-alt"></i>
                     <p>Scroll Down</p>
                 </a>
