--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <main class="wrapper">
         <section class="featured-box" id="home">
             <div class="featured-text">
-                <div class="featured-text-card">
+                <!-- <div class="featured-text-card">
                     <span>Rakesh Ganga</span>
-                </div>
+                </div> -->
                 <div class="featured-name">
                     <p>I'm <span class="typedText"></span></p>
                 </div>
