added functionalities for button actions

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+                <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i class="uil uil-file-alt"></i></a>
             </div>
             <div class="nav-menu-btn">
                 <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -50,9 +50,6 @@
     <main class="wrapper">
         <section class="featured-box" id="home">
             <div class="featured-text">
-                <!-- <div class="featured-text-card">
-                    <span>Rakesh Ganga</span>
-                </div> -->
                 <div class="featured-name">
                     <p>I'm <span class="typedText"></span></p>
                 </div>
@@ -62,12 +59,12 @@
                 </div>
                 <div class="featured-text-btn">
                     <button class="btn blue-btn">Hire Me</button>
-                    <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+                    <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i class="uil uil-file-alt"></i></a>
                 </div>
                 <div class="social-icons">
-                    <div class="icon"><i class="uil uil-instagram"></i></div>
-                    <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                    <div class="icon"><i class="uil uil-github"></i></div>
+                    <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');"><i class="uil uil-instagram"></i></div>
+                    <div class="icon" onclick="window.open('https://www.linkedin.com/in/rakeshganga/','mywindow');"><i class="uil uil-linkedin-alt"></i></div>
+                    <div class="icon" onclick="window.open('https://github.com/rakeshganga-dev','mywindow');"><i class="uil uil-github"></i></div>
                 </div>
             </div>
             <div class="featured-image">
@@ -94,7 +91,7 @@
                             vitae adipisci nesciunt eos repellat similique dolore omnis sint totam placeat accusamus,
                             quisquam autem harum at.</p>
                         <div class="about-btn">
-                            <button class="btn">Download CV <i class="uil uil-import"></i></button>
+                            <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i class="uil uil-import"></i></a>
                         </div>
                     </div>
                 </div>
@@ -222,9 +219,9 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon"><i class="uil uil-instagram"></i></div>
-            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-            <div class="icon"><i class="uil uil-github"></i></div>
+            <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');"><i class="uil uil-instagram"></i></div>
+            <div class="icon" onclick="window.open('https://www.linkedin.com/in/rakeshganga/','mywindow');"><i class="uil uil-linkedin-alt"></i></div>
+            <div class="icon" onclick="window.open('https://github.com/rakeshganga-dev','mywindow');"><i class="uil uil-github"></i></div>
         </div>
         <div class="bottom-footer">
             <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Rakesh Ganga</a> - All rights reserved</p>
