--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio | Rakesh Ganga</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -50,6 +51,9 @@
     <main class="wrapper">
         <section class="featured-box" id="home">
             <div class="featured-text">
+                <div class="featured-text-card">
+                    <span>Rakesh Ganga</span>
+                </div>
                 <div class="featured-name">
                     <p>I'm <span class="typedText"></span></p>
                 </div>
