added about section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="container">
         <nav id="header">
@@ -41,7 +43,8 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i class="uil uil-file-alt"></i></a>
+                <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i
+                        class="uil uil-file-alt"></i></a>
             </div>
             <div class="nav-menu-btn">
                 <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -58,17 +61,26 @@
                     <p>I'm <span class="typedText"></span></p>
                 </div>
                 <div class="featured-text-info">
-                    <p>Experienced full stack Developer with a passion for creating user-friendly and scalable websites
+                    <p>Highly skilled and versatile Full Stack Developer with a passion for crafting seamless,
+                        user-centric applications. Equipped with a robust background in a multitude of cutting-edge
+                        technologies, I bring extensive experience in both frontend and backend development. My
+                        proficiency spans frameworks like ReactJS, Angular, React Native, and backend technologies
+                        including Spring Boot, ExpressJS, and Django. I excel in designing and implementing scalable
+                        databases, with a focus on PostgreSQL, MySQL and MangoDB.
                     </p>
                 </div>
                 <div class="featured-text-btn">
                     <button class="btn blue-btn">Hire Me</button>
-                    <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i class="uil uil-file-alt"></i></a>
+                    <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i
+                            class="uil uil-file-alt"></i></a>
                 </div>
                 <div class="social-icons">
-                    <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');"><i class="uil uil-instagram"></i></div>
-                    <div class="icon" onclick="window.open('https://www.linkedin.com/in/rakeshganga/','mywindow');"><i class="uil uil-linkedin-alt"></i></div>
-                    <div class="icon" onclick="window.open('https://github.com/rakeshganga-dev','mywindow');"><i class="uil uil-github"></i></div>
+                    <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');">
+                        <i class="uil uil-instagram"></i></div>
+                    <div class="icon" onclick="window.open('https://www.linkedin.com/in/rakeshganga/','mywindow');"><i
+                            class="uil uil-linkedin-alt"></i></div>
+                    <div class="icon" onclick="window.open('https://github.com/rakeshganga-dev','mywindow');"><i
+                            class="uil uil-github"></i></div>
                 </div>
             </div>
             <div class="featured-image">
@@ -95,7 +107,8 @@
                             vitae adipisci nesciunt eos repellat similique dolore omnis sint totam placeat accusamus,
                             quisquam autem harum at.</p>
                         <div class="about-btn">
-                            <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i class="uil uil-import"></i></a>
+                            <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV
+                                <i class="uil uil-import"></i></a>
                         </div>
                     </div>
                 </div>
@@ -223,12 +236,16 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');"><i class="uil uil-instagram"></i></div>
-            <div class="icon" onclick="window.open('https://www.linkedin.com/in/rakeshganga/','mywindow');"><i class="uil uil-linkedin-alt"></i></div>
-            <div class="icon" onclick="window.open('https://github.com/rakeshganga-dev','mywindow');"><i class="uil uil-github"></i></div>
+            <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');"><i
+                    class="uil uil-instagram"></i></div>
+            <div class="icon" onclick="window.open('https://www.linkedin.com/in/rakeshganga/','mywindow');"><i
+                    class="uil uil-linkedin-alt"></i></div>
+            <div class="icon" onclick="window.open('https://github.com/rakeshganga-dev','mywindow');"><i
+                    class="uil uil-github"></i></div>
         </div>
         <div class="bottom-footer">
-            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Rakesh Ganga</a> - All rights reserved</p>
+            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Rakesh Ganga</a> - All rights reserved
+            </p>
         </div>
     </footer>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
