added about section

--- a/index.html
+++ b/index.html
@@ -61,12 +61,7 @@
                     <p>I'm <span class="typedText"></span></p>
                 </div>
                 <div class="featured-text-info">
-                    <p>Highly skilled and versatile Full Stack Developer with a passion for crafting seamless,
-                        user-centric applications. Equipped with a robust background in a multitude of cutting-edge
-                        technologies, I bring extensive experience in both frontend and backend development. My
-                        proficiency spans frameworks like ReactJS, Angular, React Native, and backend technologies
-                        including Spring Boot, ExpressJS, and Django. I excel in designing and implementing scalable
-                        databases, with a focus on PostgreSQL, MySQL and MangoDB.
+                    <p>Experienced full stack Developer with a passion for creating user-friendly and scalable websites
                     </p>
                 </div>
                 <div class="featured-text-btn">
@@ -103,9 +98,12 @@
                 <div class="col">
                     <div class="about-info">
                         <h3>My introduction</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ea quas atque cumque asperiores
-                            vitae adipisci nesciunt eos repellat similique dolore omnis sint totam placeat accusamus,
-                            quisquam autem harum at.</p>
+                        <p>Highly skilled and versatile Full Stack Developer with a passion for crafting seamless,
+                            user-centric applications. Equipped with a robust background in a multitude of cutting-edge
+                            technologies, I bring extensive experience in both frontend and backend development. My
+                            proficiency spans frameworks like ReactJS, Angular, React Native, and backend technologies
+                            including Spring Boot, ExpressJS, and Django. I excel in designing and implementing scalable
+                            databases, with a focus on PostgreSQL, MySQL and MangoDB.</p>
                         <div class="about-btn">
                             <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV
                                 <i class="uil uil-import"></i></a>
