--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Rakesh Ganga</title>
+    <title>Portfolio | Maddi Sahil</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -14,7 +14,7 @@
     <div class="container">
         <nav id="header">
             <div class="nav-logo">
-                <p class="nav-name">Rakesh Ganga</p>
+                <p class="nav-name">Maddi Sahil</p>
             </div>
             <div class="nav-menu" id="myNavMenu">
                 <ul class="nav-menu-list">
@@ -43,7 +43,7 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i
+                <a class="btn" href="assets/cv/Sahil M Java Developer Resume.docx" download="SahilMaddiCV">Download CV <i
                         class="uil uil-file-alt"></i></a>
             </div>
             <div class="nav-menu-btn">
@@ -55,32 +55,32 @@
         <section class="featured-box" id="home">
             <div class="featured-text">
                 <div class="featured-text-card">
-                    <span>Rakesh Ganga</span>
+                    <span>Maddi Sahil</span>
                 </div>
                 <div class="featured-name">
                     <p>I'm <span class="typedText"></span></p>
                 </div>
                 <div class="featured-text-info">
-                    <p>Experienced full stack Developer with a passion for creating user-friendly and scalable websites
+                    <p>Experienced java full stack Developer with a passion for creating user-friendly and scalable websites
                     </p>
                 </div>
                 <div class="featured-text-btn">
-                    <button class="btn blue-btn">Hire Me</button>
-                    <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV <i
+                    <button class="btn blue-btn" onclick="'mailto:maddisahil615@gmail.com'"">Hire Me</button>
+                    <a class="btn" href="assets/cv/Sahil M Java Developer Resume.docx" download="MaddiSahilCV">Download CV <i
                             class="uil uil-file-alt"></i></a>
                 </div>
                 <div class="social-icons">
-                    <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');">
-                        <i class="uil uil-instagram"></i></div>
-                    <div class="icon" onclick="window.open('https://www.linkedin.com/in/rakeshganga/','mywindow');"><i
+                    <!-- <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');">
+                        <i class="uil uil-instagram"></i></div> -->
+                    <div class="icon" onclick="window.open('https://www.linkedin.com/in/sahil-maddi/','mywindow');"><i
                             class="uil uil-linkedin-alt"></i></div>
-                    <div class="icon" onclick="window.open('https://github.com/rakeshganga-dev','mywindow');"><i
+                    <div class="icon" onclick="window.open('https://github.com/sahilmaddi','mywindow');"><i
                             class="uil uil-github"></i></div>
                 </div>
             </div>
             <div class="featured-image">
                 <div class="image">
-                    <img src="assets/images/DSC_0279-cropped.jpg" alt="profile-picture">
+                    <img src="assets/images/photo.jpeg" alt="profile-picture">
                 </div>
             </div>
             <div class="scroll-icon-box">
@@ -98,15 +98,10 @@
                 <div class="col">
                     <div class="about-info">
                         <h3>My introduction</h3>
-                        <p>Highly skilled and versatile Full Stack Developer with a passion for crafting seamless,
-                            user-centric applications. Equipped with a robust background in a multitude of cutting-edge
-                            technologies, I bring extensive experience in both frontend and backend development. My
-                            proficiency spans frameworks like ReactJS, Angular, React Native, and backend technologies
-                            including Spring Boot, ExpressJS, and Django. I excel in designing and implementing scalable
-                            databases, with a focus on PostgreSQL, MySQL and MangoDB.</p>
-                        <div class="about-btn">
-                            <a class="btn" href="assets/cv/RakeshGanga-Resume.pdf" download="RakeshGangaCV">Download CV
-                                <i class="uil uil-import"></i></a>
+                        <p>As a highly skilled and versatile Java Full Stack Developer, I am passionate about crafting seamless, user-centric applications. With a robust background in a wide array of cutting-edge technologies, I bring extensive experience in both frontend and backend development. My expertise includes modern frameworks like ReactJS and Angular, as well as backend technologies such as Spring Boot (Java) and ExpressJS (Node.js). Additionally, I have a strong proficiency in designing and implementing scalable databases, focusing on PostgreSQL, MySQL, and MongoDB
+                            <div class="about-btn">
+                            <a class="btn" href="assets/cv/Sahil M Java Developer Resume.docx" download="SahilMaddiCV">Download CV
+                        <i class="uil uil-import"></i></a>
                         </div>
                     </div>
                 </div>
@@ -122,7 +117,6 @@
                             <span>Bootstrap</span>
                             <span>ReactJs</span>
                             <span>NextJs</span>
-                            <span>React-Native</span>
                             <span>Angular</span>
                         </div>
                     </div>
@@ -131,12 +125,11 @@
                             <h3>Backend</h3>
                         </div>
                         <div class="skill-list">
-                            <span>Java</span>
-                            <span>Python</span>
-                            <span>Spring Boot(MVC)</span>
+                            <span>Java Spring Boot</span>
+                            <span>Java Spring XML</span>
                             <span>ExpressJs</span>
-                            <span>Django</span>
-                            <span>Flask</span>
+                            <span>NodeJs</span>
+                        </div>
                         </div>
                     </div>
                     <div class="skills-box">
@@ -146,7 +139,7 @@
                         <div class="skill-list">
                             <span>MySql</span>
                             <span>PostgreSql</span>
-                            <span>MangoDB</span>
+                            <span>MongoDB</span>
                         </div>
                     </div>
                     <div class="skills-box">
@@ -155,7 +148,6 @@
                         </div>
                         <div class="skill-list">
                             <span>AWS</span>
-                            <span>Digital Ocean</span>
                         </div>
                     </div>
                 </div>
@@ -169,17 +161,19 @@
                 <div class="project-box">
                     <i class="uil uil-briefcase-alt"></i>
                     <h3>Completed</h3>
-                    <label>3+ Projects</label>
-                </div>
-                <div class="project-box">
-                    <i class="uil uil-users-alt"></i>
-                    <h3>Clients</h3>
-                    <label>3+ Happy Clients</label>
+                    <label>6+ Projects</label>
                 </div>
                 <div class="project-box">
                     <i class="uil uil-award"></i>
                     <h3>Experience</h3>
-                    <label>3+ Years in the field</label>
+                    <label>2+ Years in the field</label>
+                </div>
+                <div class="project-box">
+                    <i class="glyphicon glyphicon-cloud"></i>
+                    <h3>Java Full Stack Developer | Software Engineer</h3>
+                   <center><label>2+ Years as Java and React.js Full Stack Developer</label></center>
+                </div>
+
                 </div>
             </div>
         </section>
@@ -192,8 +186,8 @@
                 <div class="col">
                     <div class="contact-info">
                         <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                        <p><i class="uil uil-envelope"></i> Email: rakeshganga012@gmail.com</p>
-                        <p><i class="uil uil-phone"></i> Phone: +91 7396680431</p>
+                        <p><i class="uil uil-envelope"></i> Email: maddisahil615@gmail.com</p>
+                        <p><i class="uil uil-phone"></i> Phone: +91 8317627594</p>
                     </div>
                 </div>
                 <div class="col">
@@ -215,7 +209,7 @@
     </main>
     <footer>
         <div class="top-footer">
-            <p>Rakesh Ganga</p>
+            <p>Maddi Sahil</p>
         </div>
         <div class="middle-footer">
             <ul class="footer-menu">
@@ -234,15 +228,15 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');"><i
-                    class="uil uil-instagram"></i></div>
-            <div class="icon" onclick="window.open('https://www.linkedin.com/in/rakeshganga/','mywindow');"><i
-                    class="uil uil-linkedin-alt"></i></div>
-            <div class="icon" onclick="window.open('https://github.com/rakeshganga-dev','mywindow');"><i
-                    class="uil uil-github"></i></div>
+             <!-- <div class="icon" onclick="window.open('https://www.instagram.com/in/rakesh__ganga/','mywindow');">
+                        <i class="uil uil-instagram"></i></div> -->
+                        <div class="icon" onclick="window.open('https://www.linkedin.com/in/sahil-maddi/','mywindow');"><i
+                            class="uil uil-linkedin-alt"></i></div>
+                    <div class="icon" onclick="window.open('https://github.com/sahilmaddi','mywindow');"><i
+                            class="uil uil-github"></i></div>
         </div>
         <div class="bottom-footer">
-            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Rakesh Ganga</a> - All rights reserved
+            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Maddi Sahil</a> - All rights reserved
             </p>
         </div>
     </footer>
