--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="project-box">
                     <i class="glyphicon glyphicon-cloud"></i>
-                    <h3>Java Full Stack Developer | Software Engineer</h3>
+                <center> <h3>Java Full Stack Developer | Software Engineer</h3> </center>
                    <center><label>2+ Years as Java and React.js Full Stack Developer</label></center>
                 </div>
 
