--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="project-box">
                     <i class="glyphicon glyphicon-cloud"></i>
                 <center> <h3 class="h3">Java Full Stack Developer | Software Engineer</h3> </center>
-                   <center><label>2+ Years as Java and React.js Full Stack Developer</label></center>
+                   <center><label class="h3">2+ Years as Java and React.js Full Stack Developer</label></center>
                 </div>
 
                 </div>
